--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,10 @@
 
 @font-face {
     font-family: 'pretendard';
-    src: url('http://Pretendard-ExtraLight.eot');
-    src: url('http://Pretendard-ExtraLight.eot?#iefix') format('embedded-opentype'),
-        url('http://Pretendard-ExtraLight.woff2') format('woff2'),
-        url('http://Pretendard-ExtraLight.woff') format('woff');
+    src: url('../font/Pretendard/Pretendard-ExtraLight.eot');
+    src: url('../font/Pretendard/Pretendard-ExtraLight.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard/Pretendard-ExtraLight.woff2') format('woff2'),
+        url('../font/Pretendard/Pretendard-ExtraLight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -13,10 +13,10 @@
 
 @font-face {
     font-family: 'pretendard';
-    src: url('http://Pretendard-Regular.eot');
-    src: url('http://Pretendard-Regular.eot?#iefix') format('embedded-opentype'),
-        url('http://Pretendard-Regular.woff2') format('woff2'),
-        url('http://Pretendard-Regular.woff') format('woff');
+    src: url('../font/Pretendard/Pretendard-Regular.eot');
+    src: url('../font/Pretendard/Pretendard-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../font/Pretendard/Pretendard-Regular.woff2') format('woff2'),
+        url('../font/Pretendard/Pretendard-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -24,10 +24,10 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('http://Montserrat-Light.eot');
-    src: url('http://Montserrat-Light.eot?#iefix') format('embedded-opentype'),
-        url('http://Montserrat-Light.woff2') format('woff2'),
-        url('http://Montserrat-Light.woff') format('woff');
+    src: url('../font/Montserrat/Montserrat-Light.eot');
+    src: url('../font/Montserrat/Montserrat-Light.eot?#iefix') format('embedded-opentype'),
+        url('../font/Montserrat/Montserrat-Light.woff2') format('woff2'),
+        url('../font/Montserrat/Montserrat-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -35,10 +35,10 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('http://Montserrat-Regular.eot');
-    src: url('http://Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
-        url('http://Montserrat-Regular.woff2') format('woff2'),
-        url('http://Montserrat-Regular.woff') format('woff');
+    src: url('../font/Montserrat/Montserrat-Regular.eot');
+    src: url('../font/Montserrat/Montserrat-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../font/Montserrat/Montserrat-Regular.woff2') format('woff2'),
+        url('../font/Montserrat/Montserrat-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -46,10 +46,10 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('http://Montserrat-Medium.eot');
-    src: url('http://Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
-        url('http://Montserrat-Medium.woff2') format('woff2'),
-        url('http://Montserrat-Medium.woff') format('woff');
+    src: url('../font/Montserrat/Montserrat-Medium.eot');
+    src: url('../font/Montserrat/Montserrat-Medium.eot?#iefix') format('embedded-opentype'),
+        url('../font/Montserrat/Montserrat-Medium.woff2') format('woff2'),
+        url('../font/Montserrat/Montserrat-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -57,10 +57,10 @@
 
 @font-face {
     font-family: 'Montserrat';
-    src: url('http://Montserrat-SemiBold.eot');
-    src: url('http://Montserrat-SemiBold.eot?#iefix') format('embedded-opentype'),
-        url('http://Montserrat-SemiBold.woff2') format('woff2'),
-        url('http://Montserrat-SemiBold.woff') format('woff');
+    src: url('../font/Montserrat/Montserrat-SemiBold.eot');
+    src: url('../font/Montserrat/Montserrat-SemiBold.eot?#iefix') format('embedded-opentype'),
+        url('../font/Montserrat/Montserrat-SemiBold.woff2') format('woff2'),
+        url('../font/Montserrat/Montserrat-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
